# mailroom

./: Dockerfile  Makefile  README.md  SCHEMA.md  base64.c  base64.h  config.h  db.c  db.h  hmac.c  hmac.h  main.c  mock_aws_ses.sh  pg-sequence.puml  send_bulk_templated_email.sh  token_harvester.c
collector/: Makefile
collector/src/: db.c  db.h  main.c
emailutils/: Makefile  go.mod  go.sum
emailutils/cmd/awsses/: main.go
etc/: verifyHmac.js
listener/: Makefile
listener/src/: hmac.c  main.c
mailer/: Cargo.toml
mailer/src/: main.rs
migrations/: 0_init.down.sql  0_init.up.sql
sender/: Cargo.toml
sender/src/: main.rs
sendmail/: Cargo.toml
sendmail/src/: main.rs
src/: base64.c  config.h  db.c  db.h  hmac.c  log.c  log.h  main.c
worker/: Cargo.toml
